# lg_llvm_ir_generator_cpp

./: .gitmodules  CMakeLists.txt
include/: llvm_ir_gen.h
src/: llvm_ir_gen.cpp  main.cpp
